# opeyml

./: Cargo.toml  README.md  opeyml.txt
benches/: opeyml_bench.rs
src/: core.rs  lib.rs  prelude.rs
tests/: benchmark_test.rs  complex_surgery_test.rs  extreme_edge_test.rs  file_op_test.rs  integration_test.rs
